fix [#34918] Interactive bevel doesn't accept +/- keys to change # of segments, only scrollwheel

Since page-up/down isnt common for this use case, replace with pad+/-